[package]
name = "lyrsync-cli"
version = "1.3.2"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lofty = "0.21"
tokio = { version = "1", features = ["full"] }
musixmatch-inofficial = { version = "0.4", default-features = false, features = ["rustls-tls-webpki-roots"] }
